# intelligent-job-management

./: .dockerignore  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  mypy.ini  presentation.html  presentation2.html
backend/: Dockerfile  Dockerfile.server  README.md  docker-compose.yml  pyproject.toml  schema.sql
backend/src/: __init__.py  app.py  cluster.py  constants.py  job_dispatcher.py  job_runner.py  main.py  models.py  profiling.py  state.py
backend/src/executors/: __init__.py  docker.py  mock_slurm.py
backend/src/routers/: __init__.py  health.py  images.py  jobs.py  nodes.py  profiling.py
backend/src/utils/: __init__.py  gpu.py
backend/tests/: __init__.py  test_infra.py  test_job_lifecycle.py  test_main.py  test_sql_integration.py
config/: gpu_energy_costs.json  nodes_config.json  nodes_config.server.json  nodes_config.tunnel.json
documentation/: Embedding project idea.txt  README.md  andreas.md  architecture_diagram.puml  current_prototype_status.puml  diagram.puml  diagram_pretty.puml  docker_tutorial_notes.md  openapi.json
documentation/report/: Makefile  README.md  commandsFile.tex  main.bib  main.tex
documentation/report/Files/: architecture.tex  config.tex  introduction.tex
documentation/report/util/: abbrev.tex
frontend/: Dockerfile  README.md  index.html  package.json  pnpm-lock.yaml  tailwind.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  hooks.ts
frontend/src/components/: AppSidebar.tsx  DataTable.tsx  MetricCard.tsx  StatusBadge.tsx
frontend/src/components/ui/: sonner.tsx
frontend/src/config/: constants.ts  features.ts
frontend/src/pages/: ClusterStatus.tsx  Dashboard.tsx  JobQueue.tsx  NotFound.tsx  Profiling.tsx  SubmitJob.tsx
frontend/src/types/: job.ts
infra/: docker-compose.server.yml  docker-compose.yml  smoke_test.sh  tunnel.sh
runtime/: Dockerfile  Dockerfile.cnn  Dockerfile.efficientnet  Dockerfile.lstm  README.md  base.py  convnet.py  efficientnet.py  lstm_big.py  lstm_small.py  sleepy.py  train.py  train_cnn.py  train_efficientnet.py  train_lstm.py
runtime/checkpoints/: latest.pt
runtime/compat/: Dockerfile  train_lstm.py
shared/: constants.py
worker/: Dockerfile  Dockerfile.server  app.py  constants.py  pyproject.toml  pytest.ini  requirements.txt  worker.py
worker/tests/: test_worker.py
